--- a/doc/sections/results.tex
+++ b/doc/sections/results.tex
@@ -3,4 +3,12 @@
 \begin{document}
 \section{Results}\label{sec:results}
 
+
+\begin{figure}[htb] 
+   \centering
+   \includegraphics[width=0.4\textwidth]{../assets/terrain_n59_e010.png} 
+   \caption{Terrain data over Norway 59\degree north, 10\degree east.}
+   \label{fig:terrain_Norway}
+\end{figure} 
+
 \end{document}
