--- a/doc/references.bib
+++ b/doc/references.bib
@@ -5,3 +5,16 @@
   howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Vandermonde_matrix&oldid=980114781}",
   note = "[Online; accessed 29-September-2020]"
 }
+
+
+@article{scikitlearn,
+ title={Scikit-learn: Machine Learning in {P}ython},
+ author={Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
+         and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P.
+         and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and
+         Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+ journal={Journal of Machine Learning Research},
+ volume={12},
+ pages={2825--2830},
+ year={2011}
+}
