Updates from Overleaf

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -14,13 +14,16 @@
 \usepackage[parfill]{parskip}
 \usepackage{pythonhighlight}
 \usepackage{gensymb}
+\usepackage{cleveref}
+\usepackage{caption}
+\usepackage{subcaption}
 
 \graphicspath{{img/}{../img/}}
 \bibliography{references.bib}
 
 %\setlength{\parindent}{0pt}
 
-\title{Project 1}
+\title{Applying Regression and Resampling Techniques to Norwegian Terrain Data with Franke's Function as Test Function}
 \author{Knut Magnus Aasrud \\ Philip Karim Niane \\ Ida Due-Sørensen}
 \date{\today}
 
