--- a/doc/references.bib
+++ b/doc/references.bib
@@ -18,3 +18,19 @@
  pages={2825--2830},
  year={2011}
 }
+
+@book{FrankeRichard1979,
+year = {1979},
+title = {A Critical Comparison of Some Methods for Interpolation of Scattered Data},
+copyright = {APPROVED FOR PUBLIC RELEASE},
+language = {eng},
+author = {Franke, Richard},
+keywords = {COMPUTER GRAPHICS ; DATA REDUCTION ; FINITE ELEMENT ANALYSIS ; PE61152N ; STANDARD DEVIATION ; WEIGHTING FUNCTIONS ; INTERPOLATION ; NUMERICAL METHODS AND PROCEDURES ; BIVARIATE DENSITY FUNCTIONS ; SMOOTHING ; APPROXIMATION(MATHEMATICS) ; Statistics and Probability ; COMPARISON},
+organization = {NAVAL POSTGRADUATE SCHOOL MONTEREY CA},
+}
+
+@misc{EarthExplorer,
+  title = {{EarthExplorer}},
+  howpublished = {\url{https://earthexplorer.usgs.gov/}},
+  note = {Accessed: 2020-09-25}
+}
