Updates from Overleaf

--- a/doc/sections/results.tex
+++ b/doc/sections/results.tex
@@ -53,6 +53,27 @@ The above results uses bootstrapping as an assessment technique. We have also im
    \caption{(a) Terrain data over Norway 59\degree north, 10\degree east. (b) Small part of the terrain data.}
 \end{figure} 
 
+\subsubsection{OLS}
+\begin{figure}[htb] 
+   \centering
+   \begin{subfigure}[b]{0.45\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{../assets/terrain_ols_error_plot.png} 
+    \caption{}
+    
+   \end{subfigure}
+   \quad
+   \begin{subfigure}[b]{0.45\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{../assets/Terrain_OLS_bestdegree.png} 
+    \caption{}
+   \end{subfigure}
+   \caption{(a) (b) 
+   }
+   \label{fig:terrain-OLS}
+\end{figure} 
+
+
 \subsubsection{Ridge regression}
 
 \begin{figure}[htb] 
