--- a/doc/sections/theory.tex
+++ b/doc/sections/theory.tex
@@ -157,7 +157,7 @@ where $L$ is the error function we want to optimize, $y_i$ are the true values, 
 \subsubsection{The Bootstrap}
 
 
-\subsection{Bias-variance decomposition}
+\subsection{Bias-variance decomposition}\label{sec:bv_decomp}
 Consider a dataset \ensuremath{\mathcal{L}} consisting of the data \ensuremath{\mathbf{X}_\mathcal{L}=\{(y_j, \boldsymbol{x}_j)} for \ensuremath{j=0\ldots n-1\}}. We assume that the true data is generated from the noisy model
 
 \begin{align}
